@@ -56,6 +56,7 @@ Includes all git commit authors. Aliases are GitHub user names.
 * (zaxcav) - Improvements to original pathfinding algorithm.
 * Hielke Morsink (Broxzier) - Tile inspector, misc.
 * Joël Troch (JoelTroch) - Keyboard shortcuts for ride construction.
+* Thomas Delebo (delebota) - Misc.
 
 ## Bug fixes
 * (halfbro)
