@@ -2291,7 +2291,7 @@ void network_chat_show_connected_message()
 // Display server greeting if one exists
 void network_chat_show_server_greeting()
 {
-	const char* greeting = gConfigNetwork.server_greeting;
+	const char* greeting = network_get_server_greeting();
 	if (!str_is_null_or_empty(greeting)) {
 		static char greeting_formatted[CHAT_INPUT_SIZE];
 		char* lineCh = greeting_formatted;
