@@ -3,9 +3,11 @@
 - Feature: [#1730] Keyboard shortcuts for track construction.
 - Feature: [#5110] The tile inspector can now be used in multiplayer.
 - Feature: [#5305] Add scenery eye dropper tool.
-- Improved: [#5137]: Removing all guests no longer closes the rides and removes the vehicles.
-- Improved: [#5163]: Minor tile inspector improvements and fixes.
+- Improved: [#3288] Added server description and greeting textboxes to the start server menu.
+- Improved: [#5137] Removing all guests no longer closes the rides and removes the vehicles.
+- Improved: [#5163] Minor tile inspector improvements and fixes.
 - Fix: [#4689] Object selection tabs sometimes flicker.
+- Fix: [#4913] Server greeting displaying local setting.
 - Fix: [#5150] --openrct-data-path sets user data path instead of OpenRCT2 data path.
 - Fix: [#5188] Clicking on a Magic Carpet doesn't open the ride window.
 - Fix: [#5238] RCT1 import: Rides are initially free when placing them.
